# pytest-study

./: .gitignore  pyproject.toml
blog/: app.py
tests/: conftest.py
tests/test_article/: test_app.py
