[tool.poetry]
name = "pytest-study"
version = "0.1.0"
description = ""
authors = ["YuZhanHuang <bigjoe1992111@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^7.1.2"
pydantic = {extras = ["email"], version = "^1.9.1"}
jsonschema = "^4.6.2"
Flask = "^2.1.2"
requests = "^2.28.1"
pytest-cov = "^3.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
